@@ -1,6 +1,7 @@
 * 2007-12-07 - dennis.sieben@open-xchange.com
 
-  - Bugfix ID#10577[HEAD ]admin does breake Database replication
+  - Bugfix ID#10577 [HEAD ]admin does breake Database replication
+  - Bugfix ID#10578 [HEAD] setDefaultSenderAddress does not work in changeUser
 
 * 2007-11-13 - dennis.sieben@open-xchange.com
 
